refactor(events): simplify pass for review-1-5 bulk sync + event types
- Lift BASIC_FIELDS/COORDINATION_FIELDS to module scope in EventsPage
- Replace Collectors.toList() with Stream.toList() in EventController
- Drop dead `|| false` in EventTypeSelectField disabled expression
- Mark A1 tasks done and log Iter 8 verification in TCF

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>